penguin/penguin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penguin-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # public internet access
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: ip   # route to Pod IPs
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:758738941592:certificate/7e4e19a9-3733-42fb-b6f7-cd892d54bf25
spec:
  ingressClassName: alb
  rules:
    - host: kubernetes.ellipsis-drive.com          # your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penguin                   # name of your Service
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - kubernetes.ellipsis-drive.com 
  #     secretName: penguin-tls
